<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <mobile.dscfuta.foodie.views.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_title"
                android:textSize="30sp"
                android:layout_marginTop="70dp"
                android:text="@string/login_title"/>
            <mobile.dscfuta.foodie.views.NormalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/dark_title"
                android:text="@string/login_subtitle"
                android:layout_marginTop="12dp"/>

            <!--form-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameLayout"
                android:layout_marginTop="30dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:maxLength="15"
                    android:hint="@string/username_hint"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <!--form-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordLayout"
                android:layout_marginTop="15dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:hint="@string/password_hint"
                    android:maxLength="15"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="?attr/selectableItemBackground"
                android:layout_gravity="center_horizontal"
                android:layout_margin="14dp"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:id="@+id/forgotPassword"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:text="@string/login_text"
                android:background="@drawable/login_button"
                android:id="@+id/login"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <mobile.dscfuta.foodie.views.NormalTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_title"
                    android:textSize="16sp"
                    android:text="@string/new_user"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/sign_up"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:id="@+id/signup"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>