<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="24dp"
             tools:context=".destinations.RecipeDetailsFragment">
   
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <!--Meal label and price-->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <mobile.dscfuta.foodie.views.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    tools:text="Cheese\nBurger"/>
            <mobile.dscfuta.foodie.views.NormalTextView
                    android:id="@+id/currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/currency"
                    android:textSize="18sp"
                    android:layout_alignParentEnd="true"/>
            <mobile.dscfuta.foodie.views.BoldTextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="24sp"
                    tools:text="2000"
                    android:textStyle="bold"
                    android:layout_below="@+id/currency"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <!--Meal label and price end-->
        
        <!--Meal Image and description-->
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:layout_gravity="center"
                android:orientation="vertical">
            
        
        <ImageView
                android:layout_gravity="center"
                android:layout_margin="48dp"
                android:layout_width="match_parent"
                android:layout_above="@+id/meal_desc"
                app:srcCompat="@drawable/ic_bacon_cheeseburger"
                android:layout_height="match_parent"/>
            <mobile.dscfuta.foodie.views.NormalTextView
                android:id="@+id/meal_desc"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/meal_desc"/>
        </RelativeLayout>
        <!--Meal Image and description end-->
        <TextView
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/size"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:layout_gravity="center"
                    android:text="S"/>
            <TextView
        
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:text="M"/>
            <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:text="L"/>
            
        </LinearLayout>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="22dp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:background="@drawable/login_button"
                android:text="@string/btn_checkout_recipe"/>
        
    </LinearLayout>
 
</FrameLayout>